...
    <string name="purchaser_login">采购商登录</string>
    <string name="purchaser_login_my">我是买家</string>
    <string name="supplier_login">销售商登录</string>
    <string name="supplier_login_my">我是卖家</string>
    <string name="verificationCode_login">短信验证码登录</string>
    <string name="get_verificationCode">获取验证码</string>
    <string name="password_login">使用密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register"><u>还没有账号？立即注册</u></string>
    <string name="register_purchaser"><u>注册账号</u></string>

    <!--  注册-->
    <string name="register_purchaser_info">以下信息我们审核通过后，可在平台买菜，请认真填写。</string>
...
