...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <com.base.widget.my_edittext.UserNameEditText
                android:id="@+id/username_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="12"
                android:background="@null"
...
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/gray_c9" />

                <TextView
                    android:id="@+id/get_verificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/r_white"
                    android:gravity="center"
                    android:text="@string/get_verificationCode"
                    android:textColor="@color/gray_ae" />
...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:background="@null"
                android:gravity="center_vertical"
...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <tools.extend.PasswordEditText
                android:id="@+id/password_edit1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="20"
                android:background="@null"
...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <tools.extend.PasswordEditText
                android:id="@+id/password_edit2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="20"
                android:background="@null"
...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <EditText
                android:id="@+id/et_realName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="20"
                android:background="@null"
...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <EditText
                android:id="@+id/shop_name_hint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="20"
                android:background="@null"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="8"
            android:gravity="end"
            android:text="@string/address_detail"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="8"
                android:gravity="end"
                android:text="@string/market_NO"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
...
            android:text="@string/agreement"
            android:textColor="@color/gray_66"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/register_OK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
...
